# cmake

cmake_code1/: CMakeLists.txt  app.cpp  helloworld.cpp
cmake_code1/include/: helloworld.h
cmake_code1/src/: app.cpp
